[tool.poetry]
name = "repl-nix-tts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_tts"}]

[tool.poetry.dependencies]
python = "^3.10"
pydub = "^0.25.1"
psutil = "^5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
